--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ httplib2==0.9.2
 python-dateutil==2.7.3
 argparse==1.4.0
 six==1.11.0
-PyYAML==3.12
+PyYAML>=3.12
 wrapt==1.10.10
 crcmod==1.7
 google-api-python-client==1.6.2
